--- a/03-task/src/app/app.component.html
+++ b/03-task/src/app/app.component.html
@@ -1,2 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="title-box">
+    <h1 class="app-title">Powered by</h1> 
+    <img src="http://bignine.info/img/angular.png" alt="angular_logo" class="angular_logo" >
+</div>
+
 <svg-box></svg-box>
