--- a/03-task/src/app/svg-box/svg-box.component.html
+++ b/03-task/src/app/svg-box/svg-box.component.html
@@ -1,8 +1,7 @@
-<div id="svg-container">
+<div #container id="svg-container">
   <svg id="svg-box">
-    <svg:g value-axis></g>
-    <svg:g time-axis></g>
+    <svg:g value-axis ></svg:g>
+    <svg:g time-axis ></svg:g>
+    <svg:g app-path [lineF]="lineF" [data]="data"></svg:g>
   </svg>
-  
-  
 </div>
