--- a/03-task/src/app/svg-box/svg-box.component.html
+++ b/03-task/src/app/svg-box/svg-box.component.html
@@ -2,6 +2,6 @@
   <svg id="svg-box">
     <svg:g value-axis ></svg:g>
     <svg:g time-axis ></svg:g>
-    <svg:g app-path [lineF]="lineF" [data]="data"></svg:g>
+    <svg:g app-path [data]="data" [timeAxis]="timeAxis" [valueAxis]="valueAxis"></svg:g>
   </svg>
 </div>
