--- a/03-task/src/app/svg-box/svg-box.component.css
+++ b/03-task/src/app/svg-box/svg-box.component.css
@@ -7,6 +7,6 @@
 #svg-box{
     height: 100%;
     width: 100%;
-    background: #2e6880;
+    background: #304e5a;
     box-shadow: inset 1px 0px 158px -31px rgba(0,0,0,0.75);
 }
