--- a/03-task/src/app/app.component.html
+++ b/03-task/src/app/app.component.html
@@ -3,5 +3,5 @@
     <h1 class="app-title">Powered by</h1> 
     <img src="http://bignine.info/img/angular.png" alt="angular_logo" class="angular_logo" >
 </div>
-
-<svg-box></svg-box>
+<svg-box [data]="data" ></svg-box>
+<app-control-panel [data]="data"></app-control-panel>
