--- a/03-task/src/app/svg-box/path/path.component.html
+++ b/03-task/src/app/svg-box/path/path.component.html
@@ -1,4 +1,5 @@
 <svg:path class="domain" 
+    *ngIf="data.isVisible"
     [attr.stroke]="data.color" 
     fill='none' 
     [attr.stroke-width]="strokeWidth" 
