--- a/03-task/src/app/svg-box/svg-box.component.html
+++ b/03-task/src/app/svg-box/svg-box.component.html
@@ -1,9 +1,8 @@
 <div #container id="svg-container" (window:resize)="onResize()">
   <svg id="svg-box">
-    <svg:g value-axis ></svg:g>
-    <svg:g time-axis [svgWidth]="svgWidth"></svg:g>
+    <svg:g value-axis [svgHeight]="svgHeight"></svg:g>
+    <svg:g time-axis [svgWidth]="svgWidth" [svgHeight]="svgHeight"></svg:g>
     <svg:g app-path 
-      
       *ngFor="let pathdata of data; index as i"
       [data]="data[i]" 
       [timeAxis]="timeAxis" 
