--- a/03-task/src/app/control-panel/control-panel.component.html
+++ b/03-task/src/app/control-panel/control-panel.component.html
@@ -1,3 +1,9 @@
-<p>
-  control-panel works!
-</p>
+<h2>
+  Settings:
+</h2>
+<app-path-control 
+  class="path-controls" 
+  *ngFor="let pathdata of data; index as i" 
+  [index]="i" 
+  [pathdata]="pathdata" >
+</app-path-control>
