--- a/03-task/src/styles.css
+++ b/03-task/src/styles.css
@@ -3,4 +3,6 @@ html, body {
     padding: 50px 10px;
     height: 100%;
     background: #3a3a3a;
+    color: #dadada;
+    font-family: 'Montserrat', sans-serif;
 }
