--- a/03-task/src/app/control-panel/path-control/path-control.component.html
+++ b/03-task/src/app/control-panel/path-control/path-control.component.html
@@ -1,3 +1,3 @@
-<input type="checkbox" class="path-chbox" [(ngModel)]="pathdata.isVisible" checked>
-<input type="color" class="path-color" id="path3" >
+<input type="checkbox" [(ngModel)]="pathdata.isVisible">
+<input type="color" [(ngModel)]="pathdata.color">
 <label for="path3" class="path-label">{{'Path ' + (index+1)  | uppercase}}</label>
