--- a/03-task/src/app/svg-box/time-axis/time-axis.component.html
+++ b/03-task/src/app/svg-box/time-axis/time-axis.component.html
@@ -1,4 +1,3 @@
-
 <svg:g fill="none" font-size="10" font-family="sans-serif" text-anchor="end">
-  <svg:path class="domain" [attr.stroke]="stroke" [attr.stroke-width]="strokeWidth" [attr.d]="path"></svg:path>
+  <svg:path class="domain" [attr.stroke]="stroke" [attr.stroke-width]="strokeWidth" [attr.d]="path + (svgWidth - padding.right)"></svg:path>
 </svg:g>
