add time axis scaling

--- a/03-task/src/app/svg-box/time-axis/time-axis.component.html
+++ b/03-task/src/app/svg-box/time-axis/time-axis.component.html
@@ -1,3 +1,3 @@
-<svg:g fill="none" font-size="10" font-family="sans-serif" text-anchor="end">
-  <svg:path class="domain" [attr.stroke]="stroke" [attr.stroke-width]="strokeWidth" [attr.d]="path + (svgWidth - padding.right)"></svg:path>
+<svg:g id="time-axis" 
+  [style.transform]="'translate(' + padding.left + 'px,' + (svgHeight - padding.bottom) + 'px)'">
 </svg:g>
