--- a/03-task/src/app/svg-box/svg-box.component.html
+++ b/03-task/src/app/svg-box/svg-box.component.html
@@ -1,7 +1,12 @@
 <div #container id="svg-container" (window:resize)="onResize()">
   <svg id="svg-box">
     <svg:g value-axis [svgHeight]="svgHeight" [padding]="padding"></svg:g>
-    <svg:g time-axis [svgWidth]="svgWidth" [svgHeight]="svgHeight" [padding]="padding"></svg:g>
+    <svg:g time-axis 
+      [svgWidth]="svgWidth" 
+      [svgHeight]="svgHeight" 
+      [padding]="padding" 
+      [timeAxis]="timeAxis">
+    </svg:g>
     <svg:g app-path 
       *ngFor="let pathdata of data; index as i"
       [data]="data[i]" 
