--- a/03-task/src/app/control-panel/path-control/path-control.component.html
+++ b/03-task/src/app/control-panel/path-control/path-control.component.html
@@ -1,3 +1,3 @@
-<input type="checkbox" [(ngModel)]="pathdata.isVisible">
-<input type="color" [(ngModel)]="pathdata.color">
+<input type="checkbox" checked (click)=toggleVisibility($event)>
+<input type="color" [attr.value]="pathdata.color" (input)="changeColor($event)">
 <label for="path3" class="path-label">{{'Path ' + (index+1)  | uppercase}}</label>
