--- a/03-task/src/app/line-chart/line-chart.component.html
+++ b/03-task/src/app/line-chart/line-chart.component.html
@@ -8,8 +8,9 @@
       [timeAxis]="timeAxis">
     </svg:g>
     <svg:g app-path 
-      *ngFor="let pathdata of data; index as i"
-      [data]="data[i]" 
+      *ngFor="let pathdata of allData; index as i"
+      [data]="allData[i]" 
+      [config]="allConfig[i]" 
       [timeAxis]="timeAxis" 
       [valueAxis]="valueAxis"
       [padding]="padding">
