--- a/03-task/src/app/app.component.html
+++ b/03-task/src/app/app.component.html
@@ -11,4 +11,10 @@
     (colorChangeEvent)="changeColor($event)"
     (visibilityToggleEvent)="toggleVisibility($event)">
 </app-control-panel>
-<!-- no need to pass data, right? -->
+
+<br>
+<button (click)="increment()">Increment</button>
+<div>Current Count: {{ counter | async }}</div>
+<button (click)="decrement()">Decrement</button>
+
+<button (click)="reset()">Reset Counter</button>
